Revise no-data page

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -118,10 +118,13 @@
         <p>
         There is currently no data associated with this application. You have
         two options. If you have previously saved a data file, restore it by
-        specifying the file in the <b>Restore</b> section. If you want to load
-        a small sample data set, click the button in the <b>Sample</b> section.
-        In the latter case, you can modify the data and save it to its own file
-        for later use.
+        specifying the file in the <b>Restore</b> section. This is a two-step
+        process: first, select the file and then click <b>Restore Project</b>.
+        </p>
+
+        <p>
+        If you want to load a small sample data set, click the button in the
+        <b>Load Sample Data</b> section.
         </p>
 
         <h2>Restore</h2>
@@ -139,8 +142,9 @@
         <h2>Load sample data</h2>
 
         <p>
-        Click the following button to initialize the program with a small sample
-        project. You will be able to modify the data to adapt it to your own project.
+        Click the following button to initialize the program with a small
+        sample project. You will be able to modify the data and save it for
+        later reuse.
         </p>
 
         <p><button data-action="sample">Load sample</button></p>
