Correct target to help page in no-data page

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -149,7 +149,7 @@
 
         <p><button data-action="sample">Load sample</button></p>
 
-        <p><button data-href="/help">Help</button></p>
+        <p><button data-show="/help">Help</button></p>
 
       </div>
 
