Bold the code style

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -294,7 +294,7 @@
           will use to fetch resources from the host server, which incidentally
           can be a static web server. Think of a service worker as a little
           local web server that your app will contact to retrieve resources. If
-          a resource is available in the local cache, the service worked will
+          a resource is available in the local cache, the service worker will
           deliver that. If a resource is not available, it will contact the
           host server to get it. In this project, an "offline first" strategy
           is used. Only after the app is running will it check for updated
