--- a/pwa/index.html
+++ b/pwa/index.html
@@ -118,16 +118,17 @@
         <p>
         There is currently no data associated with this application. You have
         two options. If you have previously saved a data file, restore it by
-        specifying the file in the <b>Restore</b> section. This is a two-step
-        process: first, select the file and then click <b>Restore Project</b>.
-        </p>
-
-        <p>
-        If you want to load a small sample data set, click the button in the
-        <b>Load Sample Data</b> section.
+        specifying the file in the <b>Restore</b> section. Otherwise, if you
+        want to load a small sample data set, click the button in the <b>Load
+        Sample Data</b> section.
         </p>
 
         <h2>Restore</h2>
+
+        <p>
+        Restoring a file is a two-step process. First, select the file and then
+        click <b>Restore Project</b>.
+        </p>
 
         <form data-name="project-restore">
 
